[package]
name = "toolius_maximus"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
features = "0.10.0"
json = "0.12.4"
reqwest = {version="0.12.15", features= ["json", "rustls-tls"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
