[package]
name = "toolius_maximus"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
features = "0.10.0"
json = "0.12.4"
log = "0.4.27"
reqwest = {version="0.12.15", features= ["json", "rustls-tls"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }

[lib]
name = "toolius_maximus"
path = "src/lib.rs"
